Cancelling tasks now works. Implemented realtime search (shamelessly stolen from a brilliant guy from StackOverflow). There's a strange bug where the page doesn't always load instantly, not sure what's happening. Another major feature missing is pagination. If the amount of data grows, it's not realistic having everything displaying in the same page - we need to feed the data slowly from the server to the client to avoid flooding and long waiting times. That, and having a data backend that actually works outside of the python real. Not sure if just going straight to sqlite and adding a dependency, or implement a simplistic json file storage backend.

--- a/static/main.css
+++ b/static/main.css
@@ -71,3 +71,12 @@ div#overlay {
      padding:15px;
      text-align:center;
 }
+
+.input-group-xs>.form-control,
+.input-group-xs>.input-group-addon,
+.input-group-xs>.input-group-btn>.btn {
+    height: 22px;
+    padding: 1px 5px;
+    font-size: 12px;
+    line-height: 1.5;
+}
